[package]
name = "token_deployer"
version = "0.1.0"
description = "Program to deploy new tokens and add concentracted liquidity to Raydium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_deployer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.0", features = ["metadata"]}
mpl-token-metadata = { version = "4.0.0" }
solana-program = "1.18.12"
spl-token = "4.0.0"